k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  namespace: default
  labels:
    app: weather-app
spec:
  type: ClusterIP  # Changez en LoadBalancer ou NodePort si nécessaire
  selector:
    app: weather-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
